--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -1,3 +1,5 @@
+% machine learning citations
+
 @book{hastie-elemstatslearn,
   added-at = {2009-12-09T12:44:18.000+0100},
   author = {Hastie, T. and Tibshirani, R. and Friedman, J.},
@@ -11,14 +13,14 @@
   year = 2009
 }
 
-@book{bishop - patternRecognition,
+@book{bishop-patternRecognition,
  author = {Bishop, Christopher M.},
  title = {Pattern Recognition and Machine Learning (Information Science and Statistics)},
  year = {2006},
  isbn = {0387310738},
  publisher = {Springer-Verlag New York, Inc.},
  address = {Secaucus, NJ, USA},
-} 
+}
 
 @InProceedings{ McKinney-pandas,
   author    = { Wes McKinney },
@@ -45,7 +47,7 @@
  doi = {10.14778/2212351.2212354},
  acmid = {2212354},
  publisher = {VLDB Endowment},
-} 
+}
 
 @article{scikit-learn,
  title={Scikit-learn: Machine Learning in {P}ython},
@@ -237,7 +239,7 @@ url="http://dx.doi.org/10.1023/A:1010933404324"
     pages = {278--},
     url = {http://dl.acm.org/citation.cfm?id=844379.844681},
     publisher = {IEEE Computer Society},
-   
+
 }
 
 @Article{james-biasVarianceGeneral,
@@ -294,4 +296,262 @@ url="http://dx.doi.org/10.1023/A:1022899518027"
   editor =    {Saitta, Lorenza},
   publisher = {Morgan Kaufmann},
   pages =     {148-156},
+}
+
+
+% epidemiological/biological citations
+
+@article{carabarin2013chagas,
+  title={Chagas disease (American trypanosomiasis) in {M}exico: an update},
+  author={Carabarin-Lima, Alejandro and Gonz{\'a}lez-V{\'a}zquez, Mar{\'\i}a Cristina and Rodr{\'\i}guez-Morales, Olivia and Bayl{\'o}n-Pacheco, Lidia and Rosales-Encina, Jos{\'e} Luis and Reyes-L{\'o}pez, Pedro Antonio and Arce-Fonseca, Minerva},
+  journal={Acta tropica},
+  volume={127},
+  number={2},
+  pages={126--135},
+  year={2013},
+  publisher={Elsevier}
+}
+
+
+@article{dumonteil1999update,
+  title={Update on {C}hagas' disease in {M}exico},
+  author={Dumonteil, Eric},
+  journal={Salud p{\'u}blica de M{\'e}xico},
+  volume={41},
+  number={4},
+  pages={322--327},
+  year={1999},
+  publisher={SciELO Public Health}
+}
+
+
+@article{guzman2001epidemiology,
+  title={Epidemiology of {C}hagas disease in {M}exico: an update},
+  author={Guzm{\'a}n-Bracho, Carmen},
+  journal={TRENDS in Parasitology},
+  volume={17},
+  number={8},
+  pages={372--376},
+  year={2001},
+  publisher={Elsevier}
+}
+
+
+@incollection{hotez2013innovation,
+  title={Innovation for the ‘bottom 100 million’: eliminating neglected tropical diseases in the {A}mericas},
+  author={Hotez, Peter J and Dumonteil, Eric and Heffernan, Michael J and Bottazzi, Maria E},
+  booktitle={Hot Topics in Infection and Immunity in Children IX},
+  pages={1--12},
+  year={2013},
+  publisher={Springer}
+}
+
+@article{manne2013barriers,
+  title={Barriers to treatment access for {C}hagas disease in {M}exico},
+  author={Manne, Jennifer M and Snively, Callae S and Ramsey, Janine M and Salgado, Marco Ocampo and B{\"a}rnighausen, Till and Reich, Michael R},
+  journal={PLoS Negl Trop Dis},
+  volume={7},
+  number={10},
+  pages={e2488},
+  year={2013},
+  publisher={Public Library of Science}
+}
+
+@article{hotez2012texas,
+  title={{Texas} and {Mexico}: sharing a legacy of poverty and neglected tropical diseases},
+  author={Hotez, Peter J and Bottazzi, Maria Elena and Dumonteil, Eric and Valenzuela, Jesus G and Kamhawi, Shaden and Ortega, Jaime and de Leon Rosales, Samuel Ponce and Cravioto, Miguel Betancourt and Tapia-Conyer, Roberto},
+  journal={PLoS Negl Trop Dis},
+  volume={6},
+  number={3},
+  pages={e1497},
+  year={2012},
+  publisher={Public Library of Science}
+}
+
+
+
+@article{hotez2013unfolding,
+  title={An unfolding tragedy of Chagas disease in North America},
+  author={Hotez, Peter J and Dumonteil, Eric and Cravioto, Miguel Betancourt and Bottazzi, Maria Elena and Tapia-Conyer, Roberto and Meymandi, Sheba and Karunakara, Unni and Ribeiro, Isabela and Cohen, Rachel M and Pecoul, Bernard},
+  journal={PLoS Negl Trop Dis},
+  volume={7},
+  number={10},
+  pages={e2300},
+  year={2013},
+  publisher={Public Library of Science}
+}
+
+@article{navarro2012chagas,
+  title={Chagas disease in Spain: need for further public health measures},
+  author={Navarro, Miriam and Navaza, B{\'a}rbara and Guionnet, Anne and L{\'o}pez-V{\'e}lez, Rogelio},
+  journal={PLoS Negl Trop Dis},
+  volume={6},
+  number={12},
+  pages={e1962},
+  year={2012},
+  publisher={Public Library of Science}
+}
+
+
+
+@article{wesolowski2015impact,
+  title={Impact of human mobility on the emergence of dengue epidemics in {P}akistan},
+  author={Wesolowski, Amy and Qureshi, Taimur and Boni, Maciej F and Sunds{\o}y, P{\aa}l Roe and Johansson, Michael A and Rasheed, Syed Basit and Eng{\o}-Monsen, Kenth and Buckee, Caroline O},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={112},
+  number={38},
+  pages={11887--11892},
+  year={2015},
+  publisher={National Acad Sciences}
+}
+
+@article{csaji2012exploring,
+  title={Exploring the mobility of mobile phone users},
+  author={Cs{\'a}ji, Bal{\'a}zs Cs and Browet, Arnaud and Traag, VA and Delvenne, Jean-Charles and Huens, Etienne and Van Dooren, Paul and Smoreda, Zbigniew and Blondel, Vincent D},
+  journal={Physica A: Statistical Mechanics and its Applications},
+  year={2012},
+  publisher={Elsevier}
+}
+
+@article{briceno2009chagas,
+  title = {{Chagas disease in the Americas: an ecohealth perspective}},
+  author = {Brice{\~n}o-Le{\'o}n, Roberto},
+  journal = {Cadernos de Sa{\'u}de P{\'u}blica},
+  volume = {25},
+  pages = {S71--S82},
+  year = {2009},
+  publisher = {SciELO Brasil},
+}
+
+
+@article{chunara2013large,
+  title = {{Large-scale Measurements of Network Topology and Disease Spread: A Pilot Evaluation Using Mobile Phone Data in Cote d’Ivoire}},
+  author = {Chunara, R and Nsoesie, EO},
+  journal = {NetMob D4D Challenge},
+  pages = {1--18},
+  year = {2013},
+}
+
+@article{enns2013human,
+  title = {{Human Mobility and Communication Patterns in Cote d’Ivoire: A Network Perspective for Malaria Control}},
+  author = {Enns, E and Amuasi, J},
+  journal = {NetMob D4D Challenge},
+  pages = {1--14},
+  year = {2013},
+}
+
+
+@article{cruz2006chagmex,
+  title={{Chagas disease in Mexico: an analysis of geographical distribution during the past 76 years-A review}},
+  author={Cruz-Reyes, A and Pickering-L{\'o}pez, Jos{\'e} M},
+  journal={Memorias do Instituto Oswaldo Cruz},
+  volume={101},
+  number={4},
+  pages={345--354},
+  year={2006},
+  publisher={SciELO Brasil}
+}
+
+
+
+@phdthesis{naboulsi2015mobile,
+  title = {{Mobile traffic analysis: a survey}},
+  author = {Naboulsi, Diala and Fiore, Marco and Ribot, Stephane and Stanica, Razvan},
+  year = {2015},
+  school = {Universit{\'e} de Lyon; INRIA Grenoble-Rh{\^o}ne-Alpes; INSA Lyon; CNR-IEIIT},
+}
+
+
+@article{OPS2006chagas,
+  title = {{Estimacion Cuantitiva de la Enfermedad del Chagas en las Americas}},
+  author = {OPS},
+  journal = {Organizacion Panamericana de la Salud/HDM/CD},
+  volume = {425-06},
+  pages = {1--6},
+  year = {2006},
+  publisher = {OPS},
+}
+
+
+@article{OPS2014mapa,
+  title = {{Mapa de Transmisión vectorial del Mal de Chagas}},
+  author = {OPS},
+  journal = {Organizacion Panamericana de la Salud},
+  year = {2014},
+  publisher = {OPS},
+}
+
+
+@article{rassi2012american,
+  title = {{American trypanosomiasis (Chagas disease)}},
+  author = {Rassi, Anis and de Rezende, Joffre Marcondes},
+  journal = {Infectious disease clinics of North America},
+  volume = {26},
+  number = {2},
+  pages = {275--291},
+  year = {2012},
+  publisher = {Elsevier},
+}
+
+
+@inproceedings{sarraute2015socialevents,
+  title = {{Social Events in a Time-Varying Mobile Phone Graph}},
+  author = {Sarraute, Carlos and Brea, Jorge and Burroni, Javier and Wehmut, Klaus and Ziviani, Artur and Alvarez-Hamelin, Ignacio},
+  booktitle = {Fourth International Conference on the Analysis of Mobile Phone Datasets (NetMob)},
+  year = {2015},
+}
+
+
+@article{schmunis2010chagas,
+  title = {{Chagas disease: a Latin American health problem becoming a world health problem}},
+  author = {Schmunis, Gabriel A and Yadon, Zaida E},
+  journal = {Acta tropica},
+  volume = {115},
+  number = {1},
+  pages = {14--21},
+  year = {2010},
+  publisher = {Elsevier},
+}
+
+
+@article{tizzoni2014use,
+  title = {{On the use of human mobility proxies for modeling epidemics}},
+  author = {Tizzoni, Michele and Bajardi, Paolo and Decuyper, Adeline and King, Guillaume Kon Kam and Schneider, Christian M and Blondel, Vincent and Smoreda, Zbigniew and Gonz{\'a}lez, Marta C and Colizza, Vittoria},
+  journal = {PLoS Comput Biol},
+  volume = {10},
+  number = {7},
+  pages = {e1003716},
+  year = {2014},
+  publisher = {Public Library of Science},
+}
+
+
+@article{wesolowski2012quantifying,
+  title = {{Quantifying the impact of human mobility on malaria}},
+  author = {Wesolowski, Amy and Eagle, Nathan and Tatem, Andrew J and Smith, David L and Noor, Abdisalan M and Snow, Robert W and Buckee, Caroline O},
+  journal = {Science},
+  volume = {338},
+  number = {6104},
+  pages = {267--270},
+  year = {2012},
+  publisher = {American Association for the Advancement of Science},
+}
+
+
+@article{who2016,
+  title = {{Chagas disease (American trypanosomiasis)}},
+  author = {WHO},
+  journal = {{World Health Organization} Fact sheets},
+  year = {2016},
+  url = {http://www.who.int/mediacentre/factsheets/fs340/en/},
+  urldate = {2016-05-09},
+}
+
+
+@misc{plan_nacional_chagas,
+  author = {Ministerio de Salud Argentina},
+  title = {{Plan Nacional de Chagas}},
+  url = {http://www.msal.gob.ar/chagas/},
+  year = {2016},
+  note = {[Online, accessed 9-may-2016]},
 }
