--- a/preamble.tex
+++ b/preamble.tex
@@ -99,7 +99,7 @@ height=21cm,top=3.7cm,headsep=1cm,footskip=1.1cm]{geometry}
 % Floats and captions |
 %---------------------+
 \usepackage{graphicx}           % To include graphics files
-\graphicspath{{/Users/Pedro/OneDrive/programming/Latex/logos/}{figures/}{tables/}}
+%\graphicspath{{/Users/Pedro/OneDrive/programming/Latex/logos/}{figures/}{tables/}}
 
 \usepackage[font=small,labelfont=bf]{caption}
 \captionsetup*[figure]{format=plain,justification=centerlast,labelsep=quad}
