--- a/ch2_descriptions_risk.tex
+++ b/ch2_descriptions_risk.tex
@@ -27,10 +27,12 @@ and $\calE$ the set of communication links. We note that only a subset $\calN_C$
 are clients of the mobile operator, the remaining nodes $\calN \setminus \calN_C$ are
 users that communicated with users in $ \calN_C $ but themselves are not clients of
 the mobile operator. 
+
 Since geolocation information is available only for users in $\calN_C$, in the analysis we considered the graph $\calG_C = \left< \calN_C, \calE_C \right> $ of communications between clients of the operator.
 
 % \paragraph{Argentina.} 
 \paragraph{Datasets Information.}
+
 The Argentinian dataset contains CDRs collected over a period of 5 months, from November 2011 to March 2012. The raw data logs contain around 50 million calls per day.
 % \paragraph{Mexico.} 
 The Mexican data source is an anonymized dataset from a national mobile phone operator. Data is available for every call made within a period of 24 months from January 2014 to December 2015. The raw logs contain between 11 and 30 million calls per day for more than 8 million users that accessed the telecommunication company's (\textit{telco}) network to place the call. This means that users from other companies are logged, as long as one of the users registering the call is a client of the operator. In practice, we only considered CDRs between users in $\calN_C$ since geolocalization was only possible for this group.
@@ -54,13 +56,13 @@ Although a lot of information is available in the CDR datasets, there may be lim
 % Visualizar (agrego alfa, min_volume y zoom en regiones)
 
 
-\section{Methodology for Risk Map Generation} \label{methods}
+\section{ Risk Map Generation} \label{methods}
 
-In this section we describe the methodology used to generate risk maps for the Chagas disease in Argentina and in Mexico.
+In this section we describe how the Chagas disease risk maps were built for the in Argentina and in Mexico and we give an overview of the their uses.
 
 \subsection{Home Detection}
 
-The first step of the process involves determining the area in which each user lives. Having the granularity of the geolocated data at the antenna level, we can match each user $u \in \calN_C$ with its \textit{home antenna} $H_u$.  To do so, we assume $H_u$ as the antenna in which user $u$ spends most of the time during weekday nights. This, according to our categorization of types of days of the week, corresponds to Monday to Thursday nights, from 8pm to 6am of the following day. This was based on the assumption that on any given day, users will be located at home during night time~\cite{sarraute2015socialevents,csaji2012exploring}. 
+The first step determines the area in which each user lives. Having the granularity of the geolocated data at the antenna level, we can match each user $u \in \calN_C$ with its \textit{home antenna} $H_u$.  To do so, we assume $H_u$ as the antenna in which user $u$ spends most of the time during weekday nights. This, according to our categorization of types of days of the week, corresponds to Monday to Thursday nights, from 8pm to 6am of the following day. This was based on the assumption that on any given day, users will be located at home during night time~\cite{sarraute2015socialevents,csaji2012exploring}. 
 Note that users for which the inferred home antenna is located in the endemic zone $E_Z$ will be considered the set of \textit{residents of $E_Z$}.
 
 In the case of Argentina, the risk area is the \textit{Gran Chaco} ecoregion, as described in Section~\ref{endemic_zone_argentina};
@@ -229,7 +231,6 @@ For space reasons, we don't provide here more specific visualizations and analys
 
 
 
-
 \section{Prediction of Long-term Migrations} \label{long_term}
 
 In this section, we describe the work on the prediction of long-term mobility.
@@ -290,7 +291,9 @@ the percentage of telco users per state, for the top 10 states.
 	\end{tabular}
 \end{table}
 
-The raw data logs contain between 11 million and 30 million calls per day and the volume of calls increases over the months, where most recent months have higher rates.
+The table above describes the similarity between the population distribution of Mexico's population and the Telco's users. This is shown drawn to highlight  possible bias in the model.
+
+Raw data logs contain between 11 million and 30 million calls per day and the volume of calls increases over the months, where most recent months have higher rates.
 
 In this analysis we considered only postpaid users, i.e., users which have a monthly  plan rate. This filtering was done because prepaid users have a higher churn rate, thus meaning that phone lines are not necessarily associated with one single person during the two years of analysis, making them less suitable for the purpose of this study.
 
@@ -325,9 +328,9 @@ together with the number of calls made through each antenna. We tag all users ha
 We also register the most used antennas considering only calls made during the \textit{weeknight} period, as defined above. % that is from Monday to Friday excluding the working hours (from 8hs to 20hs)\label{WEEKNIGHT}.
 % Log counts as well.
 
-A user's home antenna is defined by the most used antenna during the \textit{weeknight} period in all of $T_0$.
+A user's home antenna is defined by the most used antenna. For our algorithms we considered two versions, the most used antenna in all of $T_0$., and the most used antenna during the \textit{week night}.
 %5 months. 
-From this, users were tagged as `endemic' if their home antenna is in the endemic zone $E_Z$ and `exposed' if any of the ten antennas logged is in the risk area.
+With this, users were tagged as `endemic' if their home antenna is in the endemic zone $E_Z$ and `exposed' if any of the ten antennas logged is in the risk area.
 
 
 \subsubsection{Mobility diameter.}
@@ -380,15 +383,14 @@ To illustrate the point, we show a small example of how two calling features cou
 \end{table}
 
 
-TimeWeekNight_OUT_12
-
-CallsWeekEnd_IN_12
+%TimeWeekNight_OUT_12
+%CallsWeekEnd_IN_12
 
 Finally we aggregate all these variables at the user level, summing over all columns and grouping by user. 
-(either $j$ or $i$) by summing across all of the different ??components?? (group by user, sum over all columns) .
+(either $j$ or $i$) by summing across all of the different components shown above, grouping the data at the user level.
 
-We also label each edge $\left< n_i, n_j \right> \in \calE_C$ if one or both users is endemic.
-We also count each user's amount of neighbors in the communication graph and the total count of endemic neighbors, labeling each user $i$ as \textit{vulnerable} whenever he has any edge with another user $j$ who lives in the endemic region $E_Z$. 
+We also label each edge $\left< n_i, n_j \right> \in \calE_C$ if one or both users is endemic and
+ands count each user's amount of neighbors in the communication graph, as well as the endemic neighbors. This labeling defines user $i$ as \textit{vulnerable} whenever he has any edge with another user $j$ who lives in the endemic region $E_Z$. 
 
 %% el vulnerable NO es el edge, sino que es el usuario . 
 %La idea es, parate en el nodo i, hace algun filtro - o ninguno - de weeknight, in/out, weekend, mes, etc. y ahora decime
@@ -408,8 +410,6 @@ The number of people who maintain their home antenna between $T_0$ and $T_1$ is 
 whereas 580,425 users had a change in their home antenna.
 In terms of endemic condition, we observed that 1,551,560 users maintained their endemic condition
 between $T_0$ and $T_1$, whereas 41,281 had a change.
-
-%We consider two versions, the most used antenna (without filtering), and the most used antenna during the \textit{week night}.
 
 
 %Dato de color:
