solve compiler error

--- a/ch4_evaluation_results.tex
+++ b/ch4_evaluation_results.tex
@@ -6,7 +6,7 @@
 %===============================================================================
 
 \chapter{Evaluation and Results}
-\label{cha:\texttt{evaluation-results}}
+\label{cha:evaluation-results}
 
 % \subsection{Supervised Algorithms}
 \subsection{Supervised Classification}
