small revision on logistic regression

--- a/ch3_machine_learning.tex
+++ b/ch3_machine_learning.tex
@@ -277,6 +277,7 @@ whilst the second order derivatives take the following form:
 \frac{\partial^2 l(\theta)}{\partial \theta \partial \theta^\intercal} = \sum_{i=1}^N x_i \cdot x_i^\intercal P(y_i \mid x_i,\theta)(1 -P(y_i \mid x_i,\theta))
 \end{equation}
 
+From the derivations above, we can now firt $\theta$ using an optimization procedure that would take advantage of having the closed-form representations of the first and second derivatives of the maximum likellihood function. 
 
 
 \subsection{Model Regularization and Hyper-parameters} \label{subsection-hyperParametersRegularization}
